openshift-yamls/deploy-svc-route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: bitnami/nginx
        name: nginx
        resources: {}
status: {}
...
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-05-08T10:02:15Z"
  labels:
    app: nginx
  name: nginx
  namespace: ahmed-abdelsamed-dev
  resourceVersion: "702014898"
  uid: e5758863-32e7-4769-8c6d-a48e9d484673
spec:
  clusterIP: 172.30.145.165
  clusterIPs:
  - 172.30.145.165
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32658
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
...
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2023-05-08T10:03:45Z"
  labels:
    app: nginx
  name: nginx
  namespace: ahmed-abdelsamed-dev
  resourceVersion: "702019011"
  uid: 2fa31779-1ff7-44aa-b695-95cafb8a130e
spec:
  host: nginx-ahmed-abdelsamed-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
status: {}
